<resources>
    <string name="app_name">VitalityPro</string>
    <string name="hello_blank_fragment">Hello blank fragment</string>
    <string name="plsSelectOneOption">Please select at least one option</string>
    <string name="login_welcome_text">Welcome! Let\'s customize \nVitalityPro for your goals.</string>
    <string name="login_goals_start">Let\'s start with goals.</string>
    <string name="login_goals_instruction">Select one that is most important to you.</string>
    <string name="login_goals_activity_level_title">What is your baseline activity level?</string>
    <string name="login_goals_activity_level_hint">Not inclduing workouts - we count that separately.</string>
    <string name="login_goals_about_yourself_instruction">Tell us a little bit about yourself</string>
    <string name="login_goals_choose_sex">Please select which gender we should use to\n calculate your calorie needs:</string>
    <string name="login_goals_age">How old are you?</string>
    <string name="login_goals_age_edttext_hint">Your age</string>
    <string name="login_goals_accurate_goal_hint">We use biological gender at birth and age to calculate an accurate goal for you.</string>
    <string name="login_goals_country">Where do you live?</string>
    <string name="login_goals_edit_text_error1">You must be 18 or older to use VitalityPro.</string>
    <string name="login_goals_edit_text_valid_value">Please enter a valid value.</string>
    <string name="age_empty">Please enter your age.</string>
    <string name="invalidAge">Please enter a valid age.</string>
    <string name="txtHeight">How tall are you?</string>
    <string name="txtHeightHint">Your height in cm.</string>
    <string name="txtWeight">How much do you weigh?</string>
    <string name="edtTextWeightHint">Your weight in kg.</string>
    <string name="txtGoalWeight">What\'s your goal weight?</string>
    <string name="edtTextGoalWeightHint">Your goal weight in kg.</string>
    <string name="goalLoseWeightMessage">Your goal is Lose Weight: Goal weight must be lower than current weight.</string>
    <string name="goalGainWeightMessage">Your goal is Gain Weight: Goal weight must be higher than current weight.</string>
    <string name="weeklyGoal">What is your weekly goal?</string>
    <string name="createAcount">Almost done! Create your account</string>
    <string name="login">Welcome Back! Sign In to Your Account</string>
    <string name="invalidUsernameLength"></string>
    <string name="weakPassword">Please enter strong password.</string>
    <string name="weakPasswordToast">Your password must be at least 8 characters long and should include a combination of letters (both uppercase and lowercase), numbers, and special characters (!, @, #, $, etc.)</string>
    <string name="btnNext">Next</string>
    <string name="btnLoseWeight">Lose weight</string>
    <string name="btnMaintainWeight">Maintain Weight</string>
    <string name="btnGainWeight">Gain Weight</string>
    <string name="btnMale">Male</string>
    <string name="btnFemale">Female</string>
    <string name="btnLose02">Lose 0,2 kilograms per week</string>
    <string name="btnLose05">Lose 0,5 kilograms per week</string>
    <string name="btnLose08">Lose 0,8 kilograms per week</string>
    <string name="btnLose1">Lose 1 kilogram per week</string>
    <string name="btnGain02">Gain 0,2 kilograms per week</string>
    <string name="btnGain05">Gain 0,5 kilograms per week</string>
    <string-array name="activity_levels">
        <item>Not Very Active</item>
        <item>Lightly Active</item>
        <item>Active</item>
        <item>Very Active</item>
    </string-array>
    <string-array name="activity_descriptions">
        <item>Spend most of the day sitting (e.g. bank teller, desk job)</item>
        <item>Spend a good part of the day on your feet (e.g. teacher, salesman)</item>
        <item>Spend a good part of the day doing some physical activity (e.g. waitress, mailman)</item>
        <item>Spend most of the day doing heavy physical activity (e.g. bike messenger, carpenter)</item>
    </string-array>
    <string-array name="countries_array">
        <item>Afghanistan</item>
        <item>Albania</item>
        <item>Algeria</item>
        <item>American Samoa</item>
        <item>Andorra</item>
        <item>Angola</item>
        <item>Anguilla</item>
        <item>Antarctica</item>
        <item>Antigua and Barbuda</item>
        <item>Argentina</item>
        <item>Armenia</item>
        <item>Aruba</item>
        <item>Australia</item>
        <item>Austria</item>
        <item>Azerbaijan</item>
        <item>Bahrain</item>
        <item>Bangladesh</item>
        <item>Barbados</item>
        <item>Belarus</item>
        <item>Belgium</item>
        <item>Belize</item>
        <item>Benin</item>
        <item>Bermuda</item>
        <item>Bhutan</item>
        <item>Bolivia</item>
        <item>Bosnia and Herzegovina</item>
        <item>Botswana</item>
        <item>Bouvet Island</item>
        <item>Brazil</item>
        <item>British Indian Ocean Territory</item>
        <item>British Virgin Islands</item>
        <item>Brunei</item>
        <item>Bulgaria</item>
        <item>Burkina Faso</item>
        <item>Burundi</item>
        <item>Cambodia</item>
        <item>Cameroon</item>
        <item>Canada</item>
        <item>Cape Verde</item>
        <item>Cayman Islands</item>
        <item>Central African Republic</item>
        <item>Chad</item>
        <item>Chile</item>
        <item>China</item>
        <item>Christmas Island</item>
        <item>Cocos (Keeling) Islands</item>
        <item>Colombia</item>
        <item>Comoros</item>
        <item>Congo</item>
        <item>Cook Islands</item>
        <item>Costa Rica</item>
        <item>Cote d\'Ivoire</item>
        <item>Croatia</item>
        <item>Cuba</item>
        <item>Cyprus</item>
        <item>Czech Republic</item>
        <item>Democratic Republic of the Congo</item>
        <item>Denmark</item>
        <item>Djibouti</item>
        <item>Dominica</item>
        <item>Dominican Republic</item>
        <item>East Timor</item>
        <item>Ecuador</item>
        <item>Egypt</item>
        <item>El Salvador</item>
        <item>Equatorial Guinea</item>
        <item>Eritrea</item>
        <item>Estonia</item>
        <item>Eswatini</item>
        <item>Ethiopia</item>
        <item>Faeroe Islands</item>
        <item>Falkland Islands</item>
        <item>Fiji</item>
        <item>Finland</item>
        <item>Former Yugoslav Republic of Macedonia</item>
        <item>France</item>
        <item>French Guiana</item>
        <item>French Polynesia</item>
        <item>French Southern Territories</item>
        <item>Gabon</item>
        <item>Georgia</item>
        <item>Germany</item>
        <item>Ghana</item>
        <item>Gibraltar</item>
        <item>Greece</item>
        <item>Greenland</item>
        <item>Grenada</item>
        <item>Guadeloupe</item>
        <item>Guam</item>
        <item>Guatemala</item>
        <item>Guinea</item>
        <item>Guinea-Bissau</item>
        <item>Guyana</item>
        <item>Haiti</item>
        <item>Heard Island and McDonald Islands</item>
        <item>Honduras</item>
        <item>Hong Kong</item>
        <item>Hungary</item>
        <item>Iceland</item>
        <item>India</item>
        <item>Indonesia</item>
        <item>Iran</item>
        <item>Iraq</item>
        <item>Ireland</item>
        <item>Israel</item>
        <item>Italy</item>
        <item>Jamaica</item>
        <item>Japan</item>
        <item>Jordan</item>
        <item>Kazakhstan</item>
        <item>Kenya</item>
        <item>Kiribati</item>
        <item>Kuwait</item>
        <item>Kyrgyzstan</item>
        <item>Laos</item>
        <item>Latvia</item>
        <item>Lebanon</item>
        <item>Lesotho</item>
        <item>Liberia</item>
        <item>Libya</item>
        <item>Liechtenstein</item>
        <item>Lithuania</item>
        <item>Luxembourg</item>
        <item>Macau</item>
        <item>Madagascar</item>
        <item>Malawi</item>
        <item>Malaysia</item>
        <item>Maldives</item>
        <item>Mali</item>
        <item>Malta</item>
        <item>Marshall Islands</item>
        <item>Martinique</item>
        <item>Mauritania</item>
        <item>Mauritius</item>
        <item>Mayotte</item>
        <item>Mexico</item>
        <item>Micronesia</item>
        <item>Moldova</item>
        <item>Monaco</item>
        <item>Mongolia</item>
        <item>Montenegro</item>
        <item>Montserrat</item>
        <item>Morocco</item>
        <item>Mozambique</item>
        <item>Myanmar</item>
        <item>Namibia</item>
        <item>Nauru</item>
        <item>Nepal</item>
        <item>Netherlands</item>
        <item>Netherlands Antilles</item>
        <item>New Caledonia</item>
        <item>New Zealand</item>
        <item>Nicaragua</item>
        <item>Niger</item>
        <item>Nigeria</item>
        <item>Niue</item>
        <item>Norfolk Island</item>
        <item>North Korea</item>
        <item>Northern Marianas</item>
        <item>Norway</item>
        <item>Oman</item>
        <item>Pakistan</item>
        <item>Palau</item>
        <item>Panama</item>
        <item>Papua New Guinea</item>
        <item>Paraguay</item>
        <item>Peru</item>
        <item>Philippines</item>
        <item>Pitcairn Islands</item>
        <item>Poland</item>
        <item>Portugal</item>
        <item>Puerto Rico</item>
        <item>Qatar</item>
        <item>Reunion</item>
        <item>Romania</item>
        <item>Russia</item>
        <item>Rwanda</item>
        <item>Sqo Tome and Principe</item>
        <item>Saint Helena</item>
        <item>Saint Kitts and Nevis</item>
        <item>Saint Lucia</item>
        <item>Saint Pierre and Miquelon</item>
        <item>Saint Vincent and the Grenadines</item>
        <item>Samoa</item>
        <item>San Marino</item>
        <item>Saudi Arabia</item>
        <item>Senegal</item>
        <item>Serbia</item>
        <item>Seychelles</item>
        <item>Sierra Leone</item>
        <item>Singapore</item>
        <item>Slovakia</item>
        <item>Slovenia</item>
        <item>Solomon Islands</item>
        <item>Somalia</item>
        <item>South Africa</item>
        <item>South Georgia and the South Sandwich Islands</item>
        <item>South Korea</item>
        <item>South Sudan</item>
        <item>Spain</item>
        <item>Sri Lanka</item>
        <item>Sudan</item>
        <item>Suriname</item>
        <item>Svalbard and Jan Mayen</item>
        <item>Swaziland</item>
        <item>Sweden</item>
        <item>Switzerland</item>
        <item>Syria</item>
        <item>Taiwan</item>
        <item>Tajikistan</item>
        <item>Tanzania</item>
        <item>Thailand</item>
        <item>The Bahamas</item>
        <item>The Gambia</item>
        <item>Togo</item>
        <item>Tokelau</item>
        <item>Tonga</item>
        <item>Trinidad and Tobago</item>
        <item>Tunisia</item>
        <item>Turkey</item>
        <item>Turkmenistan</item>
        <item>Turks and Caicos Islands</item>
        <item>Tuvalu</item>
        <item>Virgin Islands</item>
        <item>Uganda</item>
        <item>Ukraine</item>
        <item>United Arab Emirates</item>
        <item>United Kingdom</item>
        <item>United States of America</item>
        <item>United States Minor Outlying Islands</item>
        <item>Uruguay</item>
        <item>Uzbekistan</item>
        <item>Vanuatu</item>
        <item>Vatican City</item>
        <item>Venezuela</item>
        <item>Vietnam</item>
        <item>Wallis and Futuna</item>
        <item>Western Sahara</item>
        <item>Yemen</item>
        <item>Yugoslavia</item>
        <item>Zambia</item>
        <item>Zimbabwe</item>
    </string-array>
</resources>