<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/parent"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:padding="16dp"
    tools:context=".FourthFragment">

    <TextView
        android:id="@+id/txtTitle"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_goals_about_yourself_instruction"
        android:textColor="@color/black"
        android:textSize="20sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />


    <TextView
        android:id="@+id/txtHint"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="10dp"
        android:text="@string/login_goals_choose_sex"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

    <com.google.android.material.button.MaterialButtonToggleGroup
        android:id="@+id/materialButtonToggleGroup"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtHint"
        app:singleSelection="true">

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnMale"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnMale" />

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnFemale"
            style="@style/Widget.MaterialComponents.Button.OutlinedButton"
            android:layout_width="0dp"
            android:layout_height="wrap_content"
            android:layout_weight="1"
            android:text="@string/btnFemale" />

    </com.google.android.material.button.MaterialButtonToggleGroup>

    <TextView
        android:id="@+id/txtAge"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_goals_age"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/materialButtonToggleGroup"
        app:layout_constraintStart_toStartOf="@+id/materialButtonToggleGroup"
        app:layout_constraintTop_toBottomOf="@+id/materialButtonToggleGroup" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/textInputLayoutAge"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:hint="@string/login_goals_age_edttext_hint"
        app:errorEnabled="true"
        app:errorIconDrawable="@drawable/ic_error"
        app:hintTextColor="@color/black"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtAge">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/textInputEditTextAge"
            android:layout_width="match_parent"
            android:layout_height="match_parent"
            android:background="@drawable/custom_text_input_layout"
            android:inputType="number"
            android:maxLength="3"/>

    </com.google.android.material.textfield.TextInputLayout>

    <TextView
        android:id="@+id/txtBioSex"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/login_goals_accurate_goal_hint"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="@+id/textInputLayoutAge"
        app:layout_constraintTop_toBottomOf="@+id/textInputLayoutAge" />

    <TextView
        android:id="@+id/txtCountry"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:text="@string/login_goals_country"
        android:textColor="@color/black"
        app:layout_constraintEnd_toEndOf="@+id/txtBioSex"
        app:layout_constraintStart_toStartOf="@+id/txtBioSex"
        app:layout_constraintTop_toBottomOf="@+id/txtBioSex" />

    <Spinner
        android:id="@+id/countrySpinner"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="20dp"
        android:background="@drawable/custum_spinner_country"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/txtCountry"
        android:padding="15dp"/>

    <com.google.android.material.button.MaterialButton
        android:id="@+id/btnNext"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:text="@string/btnNext"
        app:layout_constraintBottom_toBottomOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent" />

</androidx.constraintlayout.widget.ConstraintLayout>