<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/constraintLayout"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".FifthFragment">

    <include
        android:id="@+id/toolbar"
        layout="@layout/toolbar"/>

    <androidx.constraintlayout.widget.ConstraintLayout
        android:layout_width="match_parent"
        android:layout_height="0dp"
        app:layout_constraintTop_toBottomOf="@+id/toolbar"
        app:layout_constraintBottom_toBottomOf="parent"
        android:padding="16dp">


        <TextView
            android:id="@+id/txtTitle"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/login_goals_about_yourself_instruction"
            android:textColor="@color/black"
            android:textSize="20sp"
            android:textStyle="bold"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toTopOf="parent" />

        <TextView
            android:id="@+id/txtHeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:text="@string/txtHeight"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="@+id/txtTitle"
            app:layout_constraintStart_toStartOf="@+id/txtTitle"
            app:layout_constraintTop_toBottomOf="@+id/txtTitle" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutHeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/txtHeightHint"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtHeight"
            app:suffixText="cm">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextHeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_input_layout"
                android:inputType="number"
                android:maxLength="3" />

        </com.google.android.material.textfield.TextInputLayout>


        <TextView
            android:id="@+id/txtWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtWeight"
            android:textColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutHeight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/edtTextWeightHint"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtWeight"
            app:suffixText="kg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_input_layout"
                android:inputType="number"
                android:maxLength="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <TextView
            android:id="@+id/txtGoalWeight"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:text="@string/txtGoalWeight"
            android:textColor="@color/black"
            android:visibility="gone"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/textInputLayoutWeight" />

        <com.google.android.material.textfield.TextInputLayout
            android:id="@+id/textInputLayoutGoalWeight"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="20dp"
            android:hint="@string/edtTextGoalWeightHint"
            android:visibility="gone"
            app:errorEnabled="true"
            app:errorIconDrawable="@drawable/ic_error"
            app:hintTextColor="@color/black"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent"
            app:layout_constraintTop_toBottomOf="@+id/txtGoalWeight"
            app:suffixText="kg">

            <com.google.android.material.textfield.TextInputEditText
                android:id="@+id/textInputEditTextGoalWeight"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:background="@drawable/custom_text_input_layout"
                android:inputType="number"
                android:maxLength="3" />

        </com.google.android.material.textfield.TextInputLayout>

        <com.google.android.material.button.MaterialButton
            android:id="@+id/btnNext"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/btnNext"
            app:layout_constraintBottom_toBottomOf="parent"
            app:layout_constraintEnd_toEndOf="parent"
            app:layout_constraintStart_toStartOf="parent" />

    </androidx.constraintlayout.widget.ConstraintLayout>



</androidx.constraintlayout.widget.ConstraintLayout>